Got rid of findbugs in speedster and fileIo packages.